2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/mididevice.h:
	* libs/midiinput/midiinput.h:
	* libs/midiinput/midiinput.pro:
	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-mididevice.h:
	* libs/midiinput/unix-midiinput.cpp:
	* libs/midiinput/unix-midiinput.h:
	* libs/midiinput/unix-midipoller.cpp:
	* libs/midiinput/unix-midipoller.h:

	Renamed midi*.h files to unix-*.h.

2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-midiinput.cpp:

	Fixed unix midi plugin compilation problems.

2008-09-15  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/mididevice.h:
	* libs/midiinput/midiinput.h:
	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-midiinput.cpp:

	Just small compile-time fixes for midi input plugin.

2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>

	* main/fixturemanager.cpp:

	The first fixture is selected in fixture manager by default unless
	something else is wanted.

2008-09-09  Heikki Junnila  <hjunnila@users.sf.net>

	* main/vccuelistproperties.cpp:

	Fixed a crash that occurred when the skip key was detached and then
	delete was attempted in destructor on an already deleted m_keyBind.

2008-09-02  Heikki Junnila  <hjunnila@users.sf.net>

	* main/vcwidget.cpp:

	Fixed VCWidget background color saving/loading.

2008-08-26  Heikki Junnila  <hjunnila@users.sf.net>

	* main/addfixture.cpp:
	* main/addfixture.h:
	* main/fixture.cpp:
	* main/fixture.h:
	* main/fixtureproperties.cpp:
	* main/fixtureproperties.h:
	* main/fixtureproperties.ui:

	Implemented fixture def & mode changing for an existing fixture.
	
2008-08-21  Heikki Junnila  <hjunnila@users.sf.net>

	* main/inputmap.cpp:
	* main/inputmap.h:
	* main/vcslider.cpp:
	* main/vcslider.h:
	* main/vcsliderproperties.cpp:
	* main/vcsliderproperties.ui:
